# langweave

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEMPLATE.md  crates.js  deny.toml  doc_test_suite.rs  doc_validation_report.json  help.html  index.html  search-index.js  settings.html  src-files.js  test_readme_example.rs  validate_docs.py
.cargo/: config.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS
benches/: bench_async_detection.rs  bench_concurrency.rs  bench_language_support.rs  bench_regex.rs  bench_translation.rs  complete_performance_baseline.rs  comprehensive_benchmark.rs  comprehensive_performance.rs  comprehensive_stress_test.rs  memory_stress_test.rs  optimization_benchmark.rs  performance_baseline.rs  stress_shared.rs  translation_benchmark.rs  zero_cost_abstractions_benchmark.rs
docs/: .gitbook.yaml  README.md  SUMMARY.md
examples/: basic_usage.rs  basic_usage_example.rs  error_example.rs  full_example.rs  language_detector_example.rs  language_detector_trait_example.rs  lib_example.rs  translations_example.rs  translator_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: batch_operations.rs  detect_language.rs  error_serialization.rs  language_validation.rs  streaming_operations.rs  translate.rs
langweave/: all.html  constant.VERSION.html  fn.detect_language.html  fn.detect_language_async.html  fn.is_language_supported.html  fn.supported_languages.html  fn.translate.html  index.html  sidebar-items.js
locales/: ar.po  de.po  en.po  es.po  fr.po  he.po  hi.po  id.po  it.po  ja.po  ko.po  nl.po  pt.po  (+2 more)
(+126 files in other folders)
